--- a/views/bridges.pug
+++ b/views/bridges.pug
@@ -1,14 +1,37 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  - var items = results 
-  div.container-fluid
-     div.row
-        each item,index in items
-            div.row(onclick=`buy(${index})`) Bridge Name: #{item["bridge_name"]} &nbsp   Bridge_size: #{item["bridge_size"]} &nbsp  Bridge_type: #{item["bridge_type"]}  
+  div(class='container')
+        h1(style="text-align: center; color: #863A6F")= title
+        - var results = results
+        div(class='container' style="text-align: center;")  
+            div.row 
+                each item, index in results
+                    div(class='col-md')
+                        div(class='card', style='width: 17rem;')
+                            div(class='card-body')
+                                - let destination = `dispatch(\"/bridge/update?id=${item._id}\")`
+                                div(class='card-text', onclick=`buy(${index})`) bridge_type: #{item["bridge_type"]}  <br> bridge_name: #{item["bridge_name"]} <br> bridge_size: #{item["bridge_size"]}
+                                 button.btn(class="btn btn-info btn-sm ml-2", style="margin: 10px; width: 150px;", onclick= destination) Update  
   script.
-      function buy(index){
-         alert("you purchased item "+(index+1))  
-      }    
+    function buy(index){
+        alert("you purchased item "+(index+1)) 
+        }
+    function dispatch(path) {
+            window.location.href = path; 
+      }
+      passport.use(new LocalStrategy( 
+  function(username, password, done) { 
+    Account.findOne({ username: username }, function (err, user) { 
+      if (err) { return done(err); } 
+      if (!user) { 
+        return done(null, false, { message: 'Incorrect username.' }); 
+      } 
+      if (!user.validPassword(password)) { 
+        return done(null, false, { message: 'Incorrect password.' }); 
+      } 
+      return done(null, user); 
+    }); 
+  }  
+ 
+  
