--- a/views/index.pug
+++ b/views/index.pug
@@ -1,19 +1,11 @@
 extends layout
-
 block content
-  h1= title
-  p Welcome to #{title}
-  p Nikki is going to have food 5times a day.
-  button(type='button', class='btn btn-secondary',onclick='doBump()') Press Me
-  br
-  div#bump Bump the count 
-  br
-  
-  script.
-      var count=0;
-      var bump=1;
-      function doBump(){
-      count=count+bump;
-      bump=bump+1;
-      print=document.getElementById("bump");
-      print.innerHTML='Count '+count+' with bump '+bump;}    
+    if (!user)
+        a(href="/login") Login
+        br
+        a(href="/register") Register
+    if (user)
+        p You are currently logged in as #{user.username}
+        a(href="/bridges") Take me to bridges
+        br
+        a(href="/logout") Logout   
